--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -11,7 +11,7 @@
     <app-header [menuType] = "selectedType"></app-header>
   </header>
   <div class="main-content ">
-    <div class="overflow-auto h-100">
+    <div  class=" h-100 w-100">
       <router-outlet></router-outlet>
     </div>
     <app-aside (updateMenuType)="updateSelectedType($event)"></app-aside>
