added search nearestTours on rxjs

--- a/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
+++ b/src/app/pages/ticket-info/ticket-item/ticket-item.component.html
@@ -84,6 +84,7 @@
     <h4>Похожие туры</h4>
     <div>
       <input #ticketSearchInput [(ngModel)]="searchText" type="text" pInputText />
+      <app-popup #popup (searchTerm)="search($event)"></app-popup>
     </div>
 
 
